--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 :root{
     --gold: #beba54;
-    --primary: var(gold)
+    --gold-dull: #979666;
+    --primary: var(gold);
     --secondary: #000;
 }
 
@@ -12,19 +13,41 @@ h1, h2, h3, h4{
     color: var(--gold);
 }
 
+/* NAVBAR */
+
+.navbar.bg-gold{
+    background-color: var(--gold-dull);
+}
+
+.navbar>.container{
+    gap: 20px;
+}
+
+/* Bootstrap dropdown on hover */
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+ }
+
+.dropdown-menu{
+    border-radius: 0;
+}
+
+
+
 /* -- Video */
 
 .fullscreen-bg{
-    /* display: block;
-	width: 100%;
-    display:inherit;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -100; */
+    display: flex;
+    height: 400px;
 }
+
+    .fullscreen-bg video{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
 /* -- Articles */
 
@@ -80,6 +103,8 @@ h1, h2, h3, h4{
 
 
 .left-img .text.box{
-    background: #f2e9e3;
+    background: #261f17;
+    color: #e8e2dc;
+    line-height: 1.4em;
     padding: 40px;
 }
