--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     --gold-dull: #979666;
     --gold-dull-rgb: 151, 150, 102;
     --dark: #1d1811;
-    --bg-light: #f7f7f2;
+    --bg-light: #f7f1e6;
     --primary: var(--gold);
     --secondary: var(--dark);
 
