--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,31 @@ h2.lg {
 }
 
 
+/* -- CTA */
+
+section.cta {
+    max-width: fit-content;
+    margin: 0 auto;
+    position: relative;
+    top: -40px;
+}
+
+section.cta ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+section.cta ul li {
+    background: #fff;
+    padding: 20px;
+    min-width: 300px;
+}
+
+
 /* -- Articles */
 
 .home-section {
@@ -150,16 +175,11 @@ h2.lg {
 .home-section .card {
     border: none;
     height: 100%;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, .2);
-}
-
-.home-section .card:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, .2);
 }
 
 .home-section .card img.card-img-top {
-    height: 170px;
     object-fit: cover;
+    height: 250px;
     position: relative;
     background-color: var(--dark);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 95%);
@@ -226,7 +246,7 @@ h2.lg {
 .gallery a img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     background: #eee;
 }
 
@@ -408,7 +428,7 @@ h2.lg {
     margin: 0;
     color: rgba(0, 0, 0, .5);
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 16px;
     letter-spacing: 3px;
 }
 
@@ -420,6 +440,18 @@ h2.lg {
 
 .sa-section {
     padding: 80px 0;
+}
+
+.sa-section:nth-child(even) {
+    background-color: var(--bg-light);
+}
+
+.sa-section h4 {
+    color: rgba(0, 0, 0, .5);
+    font-size: 16px;
+    text-transform: uppercase;
+    line-height: 1.4em;
+    letter-spacing: 1px;
 }
 
 .sa-img {}
