--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,39 @@ h2.lg {
 
 /* Bootstrap dropdown on hover */
 
-.dropdown:hover > .dropdown-menu {
+/* ============ desktop view ============ */
+@media all and (min-width: 992px) {
+
+	.dropdown-menu li{
+		position: relative;
+	}
+	.dropdown-menu .submenu{ 
+		display: none;
+		position: absolute;
+		left:100%; top:-7px;
+	}
+	.dropdown-menu .submenu-left{ 
+		right:100%; left:auto;
+	}
+
+	.dropdown-menu > li:hover{ background-color: #f1f1f1 }
+	.dropdown-menu > li:hover > .submenu{
+		display: block;
+	}
+}	
+/* ============ desktop view .end// ============ */
+
+/* ============ small devices ============ */
+@media (max-width: 991px) {
+
+.dropdown-menu .dropdown-menu{
+		margin-left:0.7rem; margin-right:0.7rem; margin-bottom: .5rem;
+}
+
+}	
+/* ============ small devices .end// ============ */
+
+/* .dropdown:hover > .dropdown-menu {
     display: block;
     margin-top: 0;
 }
@@ -175,14 +207,14 @@ h2.lg {
 .dropdown-item.active,
 .dropdown-item:active {
     background-color: var(--gold-dull);
-}
+} */
 
 
 /* -- Video */
 
 .fullscreen-bg {
     display: flex;
-    height: 400px;
+    height: 600px;
 }
 
 .fullscreen-bg video {
@@ -617,4 +649,10 @@ section.image-bg h2 {
     font-size: 70px;
     font-weight: 600;
     text-transform: uppercase;
+}
+
+/* FOOTER */
+
+footer a{
+    color: var(--dark);
 }
